doghouse alignment fixed

--- a/piano_project/static/css/styles.css
+++ b/piano_project/static/css/styles.css
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly; 
+    align-items: flex-end;
     z-index: 2;
 }
 .right-keys {
@@ -106,9 +107,8 @@
     justify-content: flex-end;
 }
 #doghouse{
-    width: 9%;
-    left: 24%;
     position: absolute;
+    width: 9%;
 }
 #bungalow{
     position: absolute;
@@ -171,7 +171,10 @@
         padding: 0.5 rem 1rem; /* Add padding for touch-friendly areas */
     }
     .main{
-        margin-top: 150px;
+        margin-top: 120px;
         max-width: 100%;
+    }
+    #top-text{
+        margin-top: 10%;
     }
 }
